[package]
name = "rltk_rougelike"
version = "0.1.0"
edition = "2018"
authors = ["nuked44 <nuked44@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git" }
specs = "0.17"
specs-derive = "0.4.1"